                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
	- 16-09-2004 fixed: ripping audio cd's to hd doesn't work anymore
  - 16-09-2004 added: support for TTF subtitles
  - 14-09-2004 fixed: couldn't move left or right to a next control when spincontrol is focused
  - 14-09-2004 changed: all settings windows remember the last selected control until going back to the prev menu
  - 13-09-2004 changed: renamed a few language folders
  - 13-09-2004 added: Portuguese (brazil) language file (Thx to wellingtontu)
  - 13-09-2004 added: German (Austria) language file (Thx to CEOMR)
  - 13-09-2004 added: [ 1026597 ] Polish language file (Thx to NaPeK)
  - 13-09-2004 fixed: my music songs, last control is always the list/thumb control when autoswitch list/thumb enabled
  - 13-09-2004 fixed: left mouse doesn't work in my pictures
  - 13-09-2004 fixed: when adding a directory to a videoplaylist the files where added in reverse order
  - 13-09-2004 added: Korean language file (thanks kimp93)
  - 12-09-2004 added: properly display non-Latin file names from ISO 9660 file system
  - 12-09-2004 fixed: properly display non-Latin id3 tags which are UTF-16/UTF-8
  - 12-09-2004 fixed: properly display non-Latin ogg tags
  - 12-09-2004 added: cdda disc ripping to samba shares
  - 11-09-2004 added: support for international characters in GUI (skin and file names)
  - 11-09-2004 fixed: retrieval of non $HOME <albums> location (sf patch #1026378 by kraqh3d)
  - 10-09-2004 Updated finnish strings.xml (thanks nanite1k)
  - 10-09-2004 changed: restart XBMC instead of reset when changed network settings.
  - 10-09-2004 fixed: State of the Album/song info on Visualisation wasn't saved.