@@ -5,7 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
-	- 16-09-2004 fixed: ripping audio cd's to hd doesn't work anymore
+  - 16-09-2004 fixed: HTTP Proxy use in Weather screens (sf patch #1028936 by kusskowe)
+  - 16-09-2004 added: Auto update after 2 seconds when you select a new location in the weather screen. (sf patch #1028936 by kusskowe)
+  - 16-09-2004 fixed: ripping audio cd's to hd doesn't work anymore
   - 16-09-2004 added: support for TTF subtitles
   - 14-09-2004 fixed: couldn't move left or right to a next control when spincontrol is focused
   - 14-09-2004 changed: all settings windows remember the last selected control until going back to the prev menu
